<resources>
    <string name="app_name">  القمة في الرياضيات</string>
    <string name="register">تسجيل دخول</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="pass">كلمة السر</string>
    <string name="resetPass">نسيت كلمة السر ؟</string>
    <string name="goToRegister">ليس لديك حساب . تسجيل حساب جديد ؟</string>
    <string name="not_active_user_message">"حسابك غير مفعل ! فعل حسابك لتتمكن من مشاهدة شرح الدروس والتفاعل مع الاستاذ  للتفعيل اتصل علي او من خلال الواتس اب "</string>
    <string name="email">البريد الالكتروني   (اختياري)</string>
    <string name="new_account">تسجيل حساب جديد</string>
    <string name="required">مطلوب</string>
    <string name="lesson_name"> ادخل اسم الدرس </string>
    <string name="url"> ادخل لينك الفيديو </string>
    <string name="pdf"> ادخل لينك ملف ال  pdf</string>
    <string name="save"> حفظ </string>
    <string name="add_new_lesson"> اضف درس جديد </string>
    <string name="edit_new_lesson"> تعديل درس  </string>
    <string name="login">  تسجيل دخول </string>
    <string name="lessons">الدروس</string>
    <string name="lessons_first"> "دروس الصف الاول الثانوي"</string>
    <string name="lessons_secound">"دروس الصف الثاني الثانوي"</string>
    <string name="lessons_thired"> "دروس الصف الثالث الثانوي"</string>
    <string name="have_account"> لديك حساب </string>
    <string name="search"> بحث عن طالب </string>
    <string name="activation"> تفعيل  الحساب</string>
    <string name="resetDevice"> اعاده تعيين جهاز جديد  </string>
    <string name="resetPassword"> اعاده تعيين كلمة السر  </string>
    <string name="expiry_date">  تاريخ انتهاء الاشتراك :  </string>
    <string name="status"> حالة الحساب</string>
    <string name="error"> حدث خطا حاول مرة اخري !!</string>
    <string name="update_success">  تم تعديل البيانات بنجاح </string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tests"> امتحانات</string>
    <string name="show_exam">  اختبار علي الدرس</string>
    <string name="show_pdf">  عرض الدرس pdf</string>
    <string name="show_video">  مشاهدة الدرس </string>
    <string name="prepareForPreview">جاري تجهيز الملف للعرض</string>
    <string name="ok"> موافق </string>
    <string name="finish_exam">تم انتهاء الوقت المخصص للامتحان </string>
    <string name="finish_exam_error"> باقي من وقت الامتحان بعد #@ وسوف يتم غلق الامتحان تلقائيآ. من فضلك اضغط علي ارسال قبل انتهاء الوقت المحدد للامتحان </string>
    <string name="alert"> تنبيه </string>
    <string name="enter_exam_url"> ادخل لينك الامتحان </string>
    <string name="add_new_exam"> اضف امتحان جديد </string>
    <string name="edit_new_exam"> تعديل امتحان  </string>
    <string name="exam_name"> اسم الامتحان  </string>
    <string name="add_date"> اختر التاريخ و الوقت بدآ الامتحان </string>
    <string name="time_limit">  اختر وقت انتهاء الامتحان  </string>
    <string name="log0ut_message"> هل تريد تسجيل خروج من التطبيق ? </string>
    <string name="cancel"> الغاء </string>
    <string name="must_update">  من فضلك قم بتحديث التطبيق لتتمكن من الاستفادة من التحديثات الجديدة </string>
    <string name="update"> تحديث </string>
    <string name="students">الطلاب</string>
</resources>
