<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonDetailsActivity">

    <TextView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:layout_margin="@dimen/d16"
        android:text="@string/show_video"
        android:textSize="@dimen/s18"
        android:textColor="@color/black"
        android:padding="@dimen/d16"
      />

    <TextView
        android:id="@+id/pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:layout_margin="@dimen/d16"
        android:text="@string/show_pdf"
        android:textSize="@dimen/s18"
        android:textColor="@color/black"
        android:padding="@dimen/d16"
        android:layout_below="@id/video"/>

    <TextView
        android:id="@+id/exam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:layout_margin="@dimen/d16"
        android:text="@string/show_exam"
        android:textSize="@dimen/s18"
        android:textColor="@color/black"
        android:padding="@dimen/d16"
        android:layout_below="@id/pdf"/>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:layout_margin="@dimen/d16"
        android:text="@string/edit_new_lesson"
        android:textSize="@dimen/s18"
        android:textColor="@color/black"
        android:padding="@dimen/d16"
        android:layout_below="@id/exam"/>
</RelativeLayout>