<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
     android:background="@color/white">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="@dimen/d150"
        android:layout_height="@dimen/d150"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:hint="@string/phone"
        android:padding="@dimen/d4"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:layout_marginTop="@dimen/d50"
        android:layout_marginEnd="@dimen/d8"
        android:layout_marginStart="@dimen/d8"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo">

        <EditText
            android:id="@+id/loginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:padding="@dimen/d4"
            android:textSize="@dimen/s16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d8"
        android:background="@drawable/boarder"
        android:hint="@string/pass"
        android:padding="@dimen/d4"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/phone">

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:padding="@dimen/d4"
            android:textSize="@dimen/s16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_but"
        android:layout_margin="@dimen/d30"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:textColor="@color/white"
        android:textSize="@dimen/s16"
        android:textStyle="bold"
        android:text="@string/register"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d30"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/s14"
        android:text="@string/resetPass"
        android:layout_marginStart="@dimen/d30"
        android:layout_marginEnd="@dimen/d30"
        android:layout_marginTop="@dimen/d30"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/loginBut"/>

    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/s14"
        android:text="@string/goToRegister"
        android:layout_marginStart="@dimen/d30"
        android:layout_marginEnd="@dimen/d30"
        android:layout_marginTop="@dimen/d16"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>
