<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_search_black"
        android:drawablePadding="@dimen/d16"
        android:textSize="@dimen/s16"
        android:background="@drawable/boarder"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/d16"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="@dimen/d8"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginEnd="@dimen/d8"
        android:layout_marginBottom="@dimen/d30"
        android:imeOptions="actionSearch"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        android:layout_margin="@dimen/d16"
        android:background="@drawable/shadow"
        android:padding="@dimen/d8"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/s16"
            tools:text="@string/app_name"
            android:padding="@dimen/d4"/>
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/s16"
            tools:text="@string/app_name"
            android:padding="@dimen/d4"/>
        <TextView
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/s16"
            tools:text="@string/app_name"
            android:padding="@dimen/d4"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/s16"
            tools:text="@string/app_name"
            android:padding="@dimen/d4"/>
        <TextView
            android:id="@+id/expiryAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/s16"
            tools:text="@string/app_name"
            android:padding="@dimen/d4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d50"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/activation"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d4"
                android:background="@drawable/rounded_but"
                android:text="@string/activation"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/resetDevice"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d4"
                android:background="@drawable/rounded_but"
                android:text="@string/resetDevice"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/resetPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d4"
                android:background="@drawable/rounded_but"
                android:text="@string/resetPassword"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>