<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:paddingBottom="@dimen/d10"
     android:background="@color/white"    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d100">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d12"
            android:background="@drawable/boarder"
            android:hint="@string/name"
            android:padding="@dimen/d4"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:padding="@dimen/d4"
                android:textSize="@dimen/s16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d12"
            android:background="@drawable/boarder"
            android:hint="@string/phone"
            android:padding="@dimen/d4"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/name">

            <EditText
                android:id="@+id/registerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:padding="@dimen/d4"
                android:textSize="@dimen/s16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d12"
            android:background="@drawable/boarder"
            android:hint="@string/email"
            android:padding="@dimen/d4"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/phone">

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:padding="@dimen/d4"
                android:textSize="@dimen/s16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <org.angmarch.views.NiceSpinner
            android:id="@+id/registerTeamSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/d12"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:backgroundSelector="@drawable/boarder"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d12"
            android:background="@drawable/boarder"
            android:hint="@string/pass"
            android:padding="@dimen/d4"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/registerTeamSpinner">

            <EditText
                android:id="@+id/registerPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:padding="@dimen/d4"
                android:textSize="@dimen/s16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_but"
            android:layout_margin="@dimen/d50"
            app:layout_constraintTop_toBottomOf="@id/pass"
            android:textColor="@color/white"
            android:textSize="@dimen/s16"
            android:textStyle="bold"
            android:text="@string/register"/>

        <ProgressBar
            android:id="@+id/registerProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pass"
            android:visibility="gone"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>